+ header is ready

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,30 @@
-<p>header works!</p>
+
+<header>
+  <a href="#" class="logo"> Ticketero </a>
+  <input type="checkbox" id="menu-bar">
+  <label for="menu-bar">Menu</label>
+  <nav class="navbar">
+    <ul>
+      <li><a href="#">Tarife</a></li>
+      <li><a href="#">Skigebiete</a>
+        <ul class="dropdown">
+          <li><a href="https://www.belalp.ch/poi-detail/belalp-bahnen-ag">Belalp Bahnen AG</a></li>
+          <li><a href="https://www.rosswald-bahnen.ch/">Rosswald Bahnen AG</a></li>
+          <li><a href="https://www.rothwald.ch/">Skilifte Rothwald/Wasenalp</a></li>
+          <li><a href="https://www.aletscharena.ch/aletsch-bahnen-ag">Aletsch Bahnen AG</a></li>
+          <li><a href="https://www.aletscharena.ch/aletsch-arena/orte/riederalp">Riederalp</a></li>
+          <li><a href="https://www.aletscharena.ch/aletsch-arena/orte/bettmeralp">Bettmeralp</a></li>
+          <li><a href="https://www.aletscharena.ch/aletsch-arena/orte/fiescheralp">Fiescheralp</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Sprache</a>
+        <ul class="dropdown">
+          <li><a href="#">Deutsch</a></li>
+          <li><a href="#">Englisch</a></li>
+        </ul>
+      </li>
+      <li><a href="../kontaktformular/kontaktformular.component.html">Kontakt</a></li>
+    </ul>
+  </nav>
+  <a href="#" class="logIn"> Login  </a>
+</header>
