+ homepage contet is ready

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div class="slider" >
-
-
-</div>
-
-
+<section class="slider" >
+  <div class="vorteile">
+    <ul>
+      <li>Skigebiete</li>
+      <li>km Pisten</li>
+      <li>Zermatt</li>
+    </ul>
+  </div>
+  <div class="pass">
+    <h1>Oberwallis Skipass kaufen</h1>
+  </div>
+</section>
+<section>
+  <h2>Produkt / Gültigkeit 2022/2023</h2>
+  <p>Der Oberwalliser Skipass ist gültig ab 1. November 2022 bis 30. April 2023.</p>
+  <p>Dieser Regionalpass berechtigt den Karteninhaber zu ein unbeschränkten Anzahl Tageserstzutritten in den jeweiligen Skigebieten
+    ( Stationen sind unten aufgeführt )
+    Eine Ausnahme bilden die Zermatt Bergbahnen AG. Hier ist die Anzahl Erstzutritte auf 5 Tage (Zermatt/Cervinia international) beschränkt.</p>
+</section>
+<section>
+  <h2>18 beteiligte Stationen</h2>
+  <ul>
+    <li>Belalp Bahnen AG</li>
+    <li>Rosswald Bahnen AG</li>
+    <li>Skilifte Rothwald/Wasenalp</li>
+    <li>Aletsch Bahnen AG: Riederalp, Bettmeralp, Fiescheralp</li>
+    <li>Bellwald Sportbahnen AG</li>
+    <li>Bergbahnen Hohsass AG</li>
+    <li>Touristische Unternehmung Grächen AG</li>
+    <li>Torrent Bahnen Leukerbad-Albinen AG</li>
+    <li>Gampel-Jeizinen Bahnen</li>
+    <li>Giw / Visperterminen AG</li>
+    <li>Lauchernalp Bergbahnen AG</li>
+    <li>Moosalp Bergbahnen AG</li>
+    <li>Verkehrsbetriebe Unterbäch AG</li>
+    <li>Sportbahnen Eischoll AG</li>
+    <li>Skilifte Gspon AG</li>
+    <li>Zermatt (beschränkt auf 5 Tage pro Saison)</li>
+  </ul>
+</section>
 </body>
 </html>
