--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   padding:0;
-  background: #313131;
+  background: gray;
 }
 .slider{
   background-image: url("../../assets/Pictures/skipiste2.jpg");
