--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -4,9 +4,9 @@
 <section class="slider" >
   <div class="vorteile">
     <ul>
-      <li>Skigebiete</li>
-      <li>km Pisten</li>
-      <li>Zermatt</li>
+      <li>18 Skigebiete</li>
+      <li>888 km Pisten</li>
+      <li>5x Zermatt</li>
     </ul>
   </div>
   <div class="pass">
