--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -9,18 +9,36 @@
       <li>5x Zermatt</li>
     </ul>
   </div>
-  <div class="pass">
-    <h1>Oberwallis Skipass kaufen</h1>
+  <div class="uberschrift">
+    <h1>Oberwallis Skipass</h1>
+  </div>
+  <div class="kaufen">
+      <button type="button">Skipass kaufen</button>
   </div>
 </section>
-<section>
-  <h2>Produkt / Gültigkeit 2022/2023</h2>
+
+<section class="gultigkeit">
+  <div class="teil1">
+  </div>
+  <div class="teil2"><h2>Produkt / Gültigkeit 2022/2023</h2>
   <p>Der Oberwalliser Skipass ist gültig ab 1. November 2022 bis 30. April 2023.</p>
   <p>Dieser Regionalpass berechtigt den Karteninhaber zu ein unbeschränkten Anzahl Tageserstzutritten in den jeweiligen Skigebieten
     ( Stationen sind unten aufgeführt )
     Eine Ausnahme bilden die Zermatt Bergbahnen AG. Hier ist die Anzahl Erstzutritte auf 5 Tage (Zermatt/Cervinia international) beschränkt.</p>
+  </div>
+  <div class="teil3">
+  </div>
 </section>
-<section>
+<section class="tarife">
+  <div class="teil1"></div>
+  <div class="teil2">
+    <h2>Inhalt kommt morgen</h2>
+  </div>
+  <div class="teil3"></div>
+</section>
+<section class="beteiligt">
+  <div class="teil1"></div>
+  <div class="teil2">
   <h2>18 beteiligte Stationen</h2>
   <ul>
     <li>Belalp Bahnen AG</li>
@@ -40,6 +58,8 @@
     <li>Skilifte Gspon AG</li>
     <li>Zermatt (beschränkt auf 5 Tage pro Saison)</li>
   </ul>
+  </div>
+  <div class="teil3"></div>
 </section>
 </body>
 </html>
