--- a/src/app/bevorstehende-events/bevorstehende-events.component.html
+++ b/src/app/bevorstehende-events/bevorstehende-events.component.html
@@ -1,12 +1,16 @@
 <!-- gibt es eine max Anzahl an Skipässen pro Person? -->
-<!-- wie macht man richtig abstände in angular? -->
 
 <!DOCTYPE html>
 <html>
 <body>
 
-<h1>Mein Skipass</h1>
-
+<h2>Skipass Liste</h2>
+<ul>
+  <li *ngFor="let skipass of skipaesse">
+    <span>{{skipass.id}}</span>{{skipass.vorname}}
+  </li>
+</ul>
+<!--
 <ng-template [ngIf]="show==0">
   <p>Noch kein Skipass vorhanden?</p>
   <p>Bereits gekaufte Tickets werden hier automatisch angezeigt</p>
@@ -27,14 +31,14 @@
     <mat-card-content [@bodyExpansion]="state" class="expandable-content">
       <!--<img mat-card-sm-image src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.n2saXL7xX6_GmI3hgYyl5gHaHa%26pid%3DApi&f=1&ipt=5f39ad5eb42c2f1df3dae875986f83703d5f701db51713b5b54c26f805d3b6c6&ipo=images">-->
       <!--<qr-code [value]="'www.google.de'"></qr-code>-->
-      <qr-code [value]="qrInfo" size="100"></qr-code>
+     <!-- <qr-code [value]="qrInfo" size="100"></qr-code>
     </mat-card-content>
     <mat-card-actions>
       <button mat-button (click)="toggle()" color="primary">QR-Code anzeigen</button>
     </mat-card-actions>
   </mat-card>
 
-</ng-template>
+</ng-template>-->
 
 </body>
 </html>
