Neue Seite erstellt "Kontaktdaten"

--- a/src/app/accountverwaltung/accountverwaltung.component.html
+++ b/src/app/accountverwaltung/accountverwaltung.component.html
@@ -1,1 +1,40 @@
-<p>accountverwaltung works!</p>
+<!DOCTYPE html>
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<html>
+<head>
+  <title>Acountverwaltung</title>
+</head>
+<body>
+
+<section class="teil1">
+
+  <div class="teil_1">
+    <h1>Mein Profil</h1>
+  </div>
+
+  <div class="teil_2">
+    <h2>Willkomen zurück!</h2>
+  </div>
+</section>
+
+  <section class="verwaltungsoptionen">
+
+    <div class="liste_der_optionen">
+      <ul>
+        <li>Kontaktdaten bearbeiten</li>
+        <li><a href="http://localhost:4200/bevorstehendeEvents">Mein Skipass</a></li>
+        <li>Verlust melden</li>
+        <li>Abmelden</li>
+        <li>Problem melden</li>
+      </ul>
+    </div>
+
+</section>
+
+
+
+
+
+</body>
+
+</html>
