--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -29,13 +29,54 @@
   <div class="teil3">
   </div>
 </section>
-<section class="tarife">
+
+<section class="tarife-uberschrift">
   <div class="teil1"></div>
   <div class="teil2">
-    <h2>Inhalt kommt morgen</h2>
+    <h2>Tarife</h2>
   </div>
   <div class="teil3"></div>
 </section>
+
+<section class="tarife">
+  <div class="teil1"></div>
+  <div class="teil2" id="liste">
+    <table>
+      <thead>
+      <tr>
+        <th>Kategorie</th>
+        <th>Preis</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Erwachsene <p>Jg. 2002 und älter</p></td>
+        <td>1200€</td>
+      </tr>
+      <tr>
+        <td>Jugendliche <p>Jg. 2003-2006</p></td>
+        <td>1000€</td>
+      </tr>
+      <tr>
+        <td>Kinder <p>Jg. 2007-2016</p></td>
+        <td>600€</td>
+      </tr>
+      <tr>
+        <td>Babys <p>Jg. 2017 und jünger</p></td>
+        <td>Freie Fahrt</td>
+      </tr>
+      <tr>
+        <td>Familienpass*</td>
+        <td>3000€</td>
+      </tr>
+      </tbody>
+    </table>
+    <p> <b>*Familienpass:</b> Familienkarten werden an Familien abgegeben, die sich aus mindestens einer Erwachsenen Person und einer unbeschränkten Anzahl Kinder bis zum 19. Altersjahr (Kinder und Jugendliche; gem. Familiennachweis) zusammensetzen. Patchwork-Familie: gilt auch, wenn die gleiche Wohnadresse bestätigt wird.
+    </p>
+  </div>
+  <div class="teil3"></div>
+</section>
+
 <section class="beteiligt">
   <div class="teil1"></div>
   <div class="teil2">
