--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -1,6 +1,7 @@
 body{
   margin: 0;
   padding:0;
+  font-size:16px;
 }
 .slider{
   background-image: url("../../assets/Pictures/skipiste2.jpg");
@@ -26,20 +27,21 @@ body{
 }
 .vorteile{
   font-size: 20px;
-  padding: 2% 20%;
   font-weight: bolder;
-
+  padding-top: 40px;
 }
 .vorteile ul{
-  display: flex;
   list-style: none;
-  justify-content: space-between;
+  display: flex;
+  justify-content: space-around;
 }
 .vorteile ul li{
     background: grey;
     border: 3px solid black;
-    padding: 1%;
+    padding: 0.5%;
     border-radius: 20px;
+    width: 140px;
+    text-align: center;
 }
 .uberschrift{
   display: flex;
@@ -82,10 +84,13 @@ padding-top: 5%;
   justify-center: space-between;
   padding-bottom: 5%;
 }
-.tarife{
+.tarife-uberschrift{
   padding-top: 1%;
   display:flex;
   justify-center: space-between;
+}
+.tarife{
+  display:flex;
 }
 .teil2{
   width: 50%;
@@ -93,4 +98,16 @@ padding-top: 5%;
 .teil1,
 .teil3{
   width: 25%
+}
+table{
+  table-layout: auto;
+  width: 100%;
+  padding-bottom: 4%;
+}
+table tr{
+  font-size:16px;
+  padding-top: 15px;
+}
+table p{
+  font-size:14px;
 }
