+ footer done + footer & header responsive

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,26 @@
-<p>footer works!</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+<footer>
+  <div class="footer-container">
+    <div class="left-col">
+      <img src="logo.png" alt="" class="logo">
+      <div class="social-media">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+      <p class="rights-text">© 2023 Erstellt von <b>Ticketero</b>  Alle Rechte vorbehalten.</p>
+    </div>
+
+    <div class="right-col">
+      <h1>Unser Newsletter</h1>
+      <div class="border"></div>
+      <p>Gebe deine Email ein, um Neuigkeiten und Updates zu erhalten.</p>
+      <form action="" class="newsletter-form">
+        <input type="text" class="txtb" placeholder="E-Mail-Adresse eigeben...">
+        <input type="submit" class="btn" value="Bestätigung">
+      </form>
+    </div>
+  </div>
+</footer>
