--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -3,12 +3,15 @@ body{
   padding:0;
   font-size:16px;
 }
+html, body {
+    height: auto;
+}
+
 .slider{
   background-image: url("../../assets/Pictures/skipiste2.jpg");
   background-position: center;
   background-size: cover;
   animation: slide 90s infinite;
-  border-bottom-left-radius: 15%;
   box-shadow: 8px 8px 10px #aaa;
 }
 @keyframes slide{
@@ -34,12 +37,13 @@ body{
   list-style: none;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap-reverse;
 }
 .vorteile ul li{
     background: grey;
     border: 3px solid black;
     padding: 0.5%;
-    border-radius: 20px;
+    border-radius: 30px;
     width: 140px;
     text-align: center;
 }
@@ -47,7 +51,7 @@ body{
   display: flex;
   justify-content: center;
   padding-bottom: 5%;
-  padding-top: 3%;
+  padding-top: 5%;
   color: #fff;
 }
 .uberschrift h1{
@@ -63,7 +67,7 @@ body{
   background: grey;
   padding: 10px;
   border: 3px solid black;
-  border-radius: 20px;
+  border-radius: 30px;
   font-size: 20px;
   font-weight: bolder;
   cursor: pointer;
@@ -111,3 +115,10 @@ table tr{
 table p{
   font-size:14px;
 }
+@media(max-width:850px){
+  .uberschrift h1{
+    font-size: 40px;
+  }
+}
+
+
