--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 <body>
 <section class="slider" >
@@ -13,7 +14,9 @@
     <h1>Oberwallis Skipass</h1>
   </div>
   <div class="kaufen">
-      <button type="button">Skipass kaufen</button>
+      <button type="button">
+        <a href="../skipasskaufen/skipasskaufen.coponent.html"> Skipass kaufen</a>
+      </button>
   </div>
 </section>
 
