--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -6,6 +6,10 @@ body{
 html, body {
     height: auto;
 }
+a{
+  text-decoration: none;
+  color: black;
+}
 
 .slider{
   background-image: url("../../assets/Pictures/skipiste2.jpg");
