--- a/src/app/skipasskaufen/skipasskaufen.component.html
+++ b/src/app/skipasskaufen/skipasskaufen.component.html
@@ -1,1 +1,46 @@
-<p>skipasskaufen works!</p>
+<html>
+<body>
+<section class="kaufformular">
+<div class="teil1"> </div>
+<div class="teil2">
+  <h1>Kaufe dein Skipass</h1>
+  <p>Vorname:</p>
+  <input type="text">
+  <p>Nachname:</p>
+  <input type="text">
+  <p>PLZ:</p>
+  <input type="text">
+  <p>Strasse:</p>
+  <input type="text">
+  <p>Hausnummer:</p>
+  <input type="text">
+  <p>Wähle ein Tarif aus:</p>
+  <select name="tarif" id="tarifmenu">
+    <option value="volvo">Erwachsene</option>
+    <option value="saab">Jugendliche</option>
+    <option value="opel">Kinder</option>
+    <option value="audi">Babys</option>
+    <option value="audi">Familienpass</option>
+  </select>
+  <p>Geburtsadtum:</p>
+  <input type="date" >
+  <p>E-Mail-Adresse:</p>
+  <input type="email">
+  <p>Handynummer</p>
+  <input type="tel">
+  <p>Betrag</p>
+  <input type="submit" id="kaufen" value="Kostenpflichtig kaufen">
+</div>
+<div class="teil3"> </div>
+</section>
+<section class="hinweis">
+  <div class="teil1"></div>
+  <div class="teil4">
+    <p>Hinweis zur Zahlungsmethode: der Kauf des Skipasses verpflichtet den Käufer den oben genannten Betrag innerhalb von <b>14 Tagen</b> zu überweisen. </p>
+    <p>Die Bankverbindung bekommt der Käufer in der Bestätigungsmail zugestellt.</p>
+    <p>Der Skipass ist sofort gültig. Stornierung ist ausgeschloßen!</p>
+  </div>
+  <div class="teil3"></div>
+</section>
+</body>
+</html>
