--- a/src/app/accountverwaltung/accountverwaltung.component.html
+++ b/src/app/accountverwaltung/accountverwaltung.component.html
@@ -15,21 +15,22 @@
   <div class="teil_2">
     <h2>Willkomen zurück!</h2>
   </div>
+
+  <div class="liste_der_optionen">
+    <ul>
+      <li><a href="http://localhost:4200/kontaktdaten">Kontaktdaten bearbeiten</a></li>
+      <li><a href="http://localhost:4200/bevorstehendeEvents">Mein Skipass</a></li>
+      <li>Verlust melden</li>
+      <li>Abmelden</li>
+      <li>Problem melden</li>
+    </ul>
+  </div>
+
+  <div class="extra_div"> </div>
+
+
 </section>
 
-  <section class="verwaltungsoptionen">
-
-    <div class="liste_der_optionen">
-      <ul>
-        <li>Kontaktdaten bearbeiten</li>
-        <li><a href="http://localhost:4200/bevorstehendeEvents">Mein Skipass</a></li>
-        <li>Verlust melden</li>
-        <li>Abmelden</li>
-        <li>Problem melden</li>
-      </ul>
-    </div>
-
-</section>
 
 
 
