--- a/src/app/kontaktdaten/kontaktdaten.component.html
+++ b/src/app/kontaktdaten/kontaktdaten.component.html
@@ -1,1 +1,39 @@
-<p>kontaktdaten works!</p>
+<!DOCTYPE html>
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<html>
+<head>
+  <title>Kontaktdaten bearbeiten</title>
+</head>
+<body>
+
+
+<div class="sign-up_box">
+  <h1> Ihre persönliche Daten</h1>
+  <form>
+    <label> Vorname </label>
+    <input type="text" placeholder ="Vorname">
+    <label> Nachname </label>
+    <input type="text" placeholder ="Nachname">
+    <label> E-Mail </label>
+    <input type="text" placeholder ="E-Mail">
+    <label> Password </label>
+    <input type="text" placeholder ="Password">
+    <label> Password wiederholen </label>
+    <input type="text" placeholder ="Password wiederholen">
+    <label> Straße, Hausnummer </label>
+    <input type="text" placeholder ="Straße, Hausnummer ">
+    <label> Ort </label>
+    <input type="text" placeholder ="Ort">
+    <label> PLZ </label>
+    <input type="text" placeholder="PLZ">
+    <div class="button"><input type="button" value ="Änderungen speichern"></div>
+
+  </form>
+
+</div>
+
+
+
+
+</body>
+</html>
