--- a/src/app/accountverwaltung/accountverwaltung.component.scss
+++ b/src/app/accountverwaltung/accountverwaltung.component.scss
@@ -7,69 +7,65 @@ background-image: url("../../assets/Pictures/picture.jpg");
 
 
 .teil1{
-display:flex;
-flex-direction:column;
+background-color:rgba(255,255,255,.3);
+background-size: cover;
+display:grid;
+height:1000px;
+width:750px;
+margin-left:27%;
 
 }
-teil_1 {
-display:flex;
-max-width:1000px;
-margin-left:456px;
-padding:2%;
-}
 
+.teil_1 {
+//background-color:green;
+}
 
 .teil_1 h1 {
-font-size:45px;
-margin-top:60px;
-margin-left:390px;
-
+font-size:55px;
+text-align: center;
+margin-top:80px;
+font-style:revert;
+font-weight:bold;
 }
 
 .teil_2 h2 {
-font-size:21px;
-margin-left:430px;
+font-size:25px;
+text-align: center;
+margin-top:10px;
+font-style:revert;
+font-weight:bold;
+
 }
 
-.verwaltungsoptionen{
-display:flex;
-justify-content:center;
-background-color:rgba(255,255,255,.2);
-padding:50px;
-margin-left:35%;
-max-width:350px;
-max-height: 450px;
-margin-top:25px;
+.teil_2{
+//background-color:yellow;
 }
 
-.liste_der_optionen ul{
-padding:1px;
-width:400px;
-}
-.liste_der_optionen ul li{
-    background: grey;
-    border: 3px solid black;
-    padding: 1%;
-    border-radius: 20px;
+.liste_der_optionen{
+//background-color:red;
+
 }
 
 .liste_der_optionen li{
+margin-top:40px;
+margin-left:30%;
+justify-content:center;
+text-align:center;
 display:flex;
-background-color:grey	;
-width:38%;
+background-color:#F5F5F5;
+//#E0FFFF
+width:30%;
 font-size:18px;
-border: 50px;
 margin-bottom:45px;
-padding:20px;
-list-style: none;
+padding:10px;
+list-style:none;
+font-weight:bold;
 }
 
 a:href {
       text-decoration:none;
-
 }
 
-div {
-width: 40%;
+.extra_div {
+block-size: 280px;
 }
-
