--- a/src/app/accountverwaltung/accountverwaltung.component.scss
+++ b/src/app/accountverwaltung/accountverwaltung.component.scss
@@ -16,10 +16,6 @@ margin-left:27%;
 
 }
 
-.teil_1 {
-//background-color:green;
-}
-
 .teil_1 h1 {
 font-size:55px;
 text-align: center;
@@ -37,17 +33,10 @@ font-weight:bold;
 
 }
 
-.teil_2{
-//background-color:yellow;
-}
 
-.liste_der_optionen{
-//background-color:red;
-
-}
 
 .liste_der_optionen li{
-margin-top:40px;
+margin-top:85px;
 margin-left:30%;
 justify-content:center;
 text-align:center;
@@ -56,7 +45,7 @@ background-color:#F5F5F5;
 //#E0FFFF
 width:30%;
 font-size:18px;
-margin-bottom:45px;
+//margin-bottom:45px;
 padding:10px;
 list-style:none;
 font-weight:bold;
