--- a/src/app/bevorstehende-events/bevorstehende-events.component.scss
+++ b/src/app/bevorstehende-events/bevorstehende-events.component.scss
@@ -1,11 +1,44 @@
 .skipass {
   max-width: 400px;
   margin-bottom: 8px;
-  border: 1px solid #ababab;
+  border: 1px solid #e3e3e3;
   background-color: #EDEDED;
 }
 
 .expandable-content {
   overflow: hidden;
+}
+
+.teil1,.teil3{
+  width: 25%;
+}
+.teil2{
+  display: grid;
+  justify-content: center;
+  padding-top: 3%;
+  background:#fff;
+  width:50%;
+  padding-bottom: 5%;
+}
+
+html, body {
+  height: auto;
+}
+
+body{
+  margin: 0;
+  padding:0;
+  font-size:16px;
+}
+
+
+body{
+  background-image: url("../../assets/Pictures/skipiste2.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+.tickets{
+  display:flex;
 }
 
