--- a/src/app/kontaktdaten/kontaktdaten.component.html
+++ b/src/app/kontaktdaten/kontaktdaten.component.html
@@ -26,8 +26,7 @@
     <input type="text" placeholder ="Ort">
     <label> PLZ </label>
     <input type="text" placeholder="PLZ">
-    <div class="button"><input type="button" value ="Änderungen speichern"></div>
-
+    <div class="button"> <input type="submit" value ="Änderungen speichern"> </div>
   </form>
 
 </div>
