--- a/src/app/kontaktdaten/kontaktdaten.component.scss
+++ b/src/app/kontaktdaten/kontaktdaten.component.scss
@@ -1,56 +1,51 @@
-body {
-font-family:'Roboto',sans-serif ;
-display:flex;
+body{
+  margin: 0;
+  padding:0;
+  font-size:16px;
+}
+html, body {
+    height: auto;
+}
+body{
+background-image: url("../../assets/Pictures/skipiste3.jpg");
 background-position: center;
 background-size: cover;
-background-image: url("../../assets/Pictures/skipiste3.jpg");
-padding:0;
-font-size:16px;
+}
+.teil1,.teil3{
+  width: 25%;
+}
+.teil2{
+  display: grid;
+  justify-content: center;
+  padding-top: 3%;
+  width:50%;
+  padding-bottom: 5%;
+  background: #fff;
+  background-color:rgba(255,255,255,.8);
+}
+.persönliche_daten{
+  display:flex;
 }
 
-.sign-up_box{
-display: grid;
-width:50%;
-height:921px;
-margin:auto;
-background-color:rgba(255,255,255,.8);
-border-radius:3px;
-padding-top: 3%;
-padding-bottom: 5%;
+.teil4{
+  width:50%;
+  text-align: center;
+  padding-bottom: 2%;
+  background: #fff;
+  background-color:rgba(255,255,255,.8);
 }
 
-
-h1{
-text-align:center;
-padding-top:10px;
-padding-left:40px;
-font-size: 55px;
-font-style:revert;
-font-weight:bold;
+.teil2 p{
+  padding-top:10%;
+}
+.teil2 h1{
+  font-size: 55px;
+  font-style:revert;
+  font-weight:bold;
 }
 
-form {
-width:300px;
+.teil2 #submit {
+margin-top:60px;
+padding:10px;
+
 }
-
-form label{
-display:flex;
-margin-top:5px;
-font-size:16px;
-padding:8px;
-margin-left:272px;
-}
-
-form input {
-//padding:8px;
-border:1px solid black;
-width:450px;
-margin-left:280px;
-}
-
-.button {
-height:25px;
-margin-top:25px;
-}
-
-
