--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,8 +23,8 @@
           <li><a href="#">Englisch</a></li>
         </ul>
       </li>
-      <li><a href="../kontaktformular/kontaktformular.component.html">Kontakt</a></li>
+      <li><a [routerLink]="['/kontaktformular']">Kontakt</a></li>
     </ul>
   </nav>
-  <a href="../anmeldemaske/anmeldemaske.coponent.html" class="logIn"> Login  </a>
+  <a [routerLink]="['/anmelden']"> Login  </a>
 </header>
