--- a/src/app/registrierungsmaske/registrierungsmaske.component.scss
+++ b/src/app/registrierungsmaske/registrierungsmaske.component.scss
@@ -1,4 +1,4 @@
-.example-container {
+.example-container mat-form-field + mat-form-field {
   display: flex;
   flex-direction: column;
 }
@@ -39,5 +39,19 @@ body{
 .registrieren{
   display:flex;
 }
+
+.example-right-align {
+  text-align: right;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+  display: none;
+}
+
+input.example-right-align {
+  -moz-appearance: textfield;
+}
+
 
 
