--- a/src/app/bevorstehende-events/bevorstehende-events.component.scss
+++ b/src/app/bevorstehende-events/bevorstehende-events.component.scss
@@ -16,7 +16,7 @@
   display: grid;
   justify-content: center;
   padding-top: 3%;
-  background:#fff;
+  background-color:rgba(255,255,255,.8);
   width:50%;
   padding-bottom: 5%;
 }
