--- a/src/app/kontaktformular/kontaktformular.component.html
+++ b/src/app/kontaktformular/kontaktformular.component.html
@@ -1,1 +1,28 @@
-<p>kontaktformular works!</p>
+<!DOCTYPE html>
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<head>
+  <title>Kontaktdaten bearbeiten</title>
+</head>
+<html>
+<body>
+<section class="persönliche_daten">
+  <div class="teil1"> </div>
+  <div class="teil2">
+    <h1>Kontakt zu uns</h1>
+    <p>Name </p>
+    <input type="text">
+    <p> Aktuelle E-Mail Adresse </p>
+    <input type="email" placeholder="E-Mail Adresse">
+    <p>Handynummer (für die Rückmeldungen) </p>
+    <input type="tel" placeholder="Handynummer">
+    <p>Betreff</p>
+    <input type="text" placeholder="Hier können Sie Ihren Betreff eingeben">
+    <p> Ihre Anfrage </p>
+    <textarea id="anfrage" placeholder="Hier können Sie Ihre Nachricht lassen" rows="10"></textarea>
+    <input type="submit" id="submit" value="Absenden">
+  </div>
+  <div class="teil3"> </div>
+
+</section>
+</body>
+</html>
