--- a/src/app/accountverwaltung/accountverwaltung.component.html
+++ b/src/app/accountverwaltung/accountverwaltung.component.html
@@ -16,20 +16,17 @@
     <h2>Willkomen zurück!</h2>
   </div>
 
-
-
   <div class="liste_der_optionen">
     <ul>
       <li><a href="http://localhost:4200/kontaktdaten">Kontaktdaten bearbeiten</a></li>
       <li><a href="http://localhost:4200/bevorstehendeEvents">Mein Skipass</a></li>
-      <li>Verlust melden</li>
-      <li>Abmelden</li>
+      <li><a href="http://localhost:4200/kontaktformular"> Verlust melden </a></li>
       <li>Problem melden</li>
+      <li>Abmelden</li>
     </ul>
   </div>
 
   <div class="extra_div"> </div>
-
 
 </section>
 
