--- a/src/app/accountverwaltung/accountverwaltung.component.scss
+++ b/src/app/accountverwaltung/accountverwaltung.component.scss
@@ -1,5 +1,5 @@
 body{
-
+height:auto;
 background-position: center;
 background-size: cover;
 background-image: url("../../assets/Pictures/picture.jpg");
@@ -22,6 +22,7 @@ font-weight:bold;
 }
 
 .teil_2 h2 {
+margin-top:20px;
 font-size:25px;
 text-align:center;
 font-style:revert;
@@ -30,7 +31,7 @@ font-weight:bold;
 }
 
 .liste_der_optionen li{
-margin-top:50px;
+margin-top:90px;
 justify-content:center;
 text-align:center;
 display:flex;
@@ -59,5 +60,5 @@ text-decoration:none;
 }
 
 .extra_div {
-block-size: 280px;
+block-size: 300px;
 }
