--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -23,6 +23,8 @@ header .logo{
   font-weight: bolder;
   font-size: 30px;
   color: #fff;
+  background: black;
+  cursor: pointer;
 }
 header .logIn{
   font-weight: bolder;
