--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -14,8 +14,7 @@
     <h1>Oberwallis Skipass</h1>
   </div>
   <div class="kaufen">
-      <button type="button">
-        <a href="../skipasskaufen/skipasskaufen.coponent.html"> Skipass kaufen</a>
+      <button type="button" [routerLink]="['/skipasskaufen']"> Skipass kaufen
       </button>
   </div>
 </section>
