--- a/src/app/skipasskaufen/skipasskaufen.component.html
+++ b/src/app/skipasskaufen/skipasskaufen.component.html
@@ -16,11 +16,11 @@
   <input type="text">
   <p>Wähle ein Tarif aus:</p>
   <select name="tarif" id="tarifmenu">
-    <option value="volvo">Erwachsene</option>
-    <option value="saab">Jugendliche</option>
-    <option value="opel">Kinder</option>
-    <option value="audi">Babys</option>
-    <option value="audi">Familienpass</option>
+    <option value="volvo">Erwachsene 1200€</option>
+    <option value="saab">Jugendliche 1000€</option>
+    <option value="opel">Kinder 600€</option>
+    <option value="audi">Babys kostenlos</option>
+    <option value="audi">Familienpass 3000€ </option>
   </select>
   <p>Geburtsadtum:</p>
   <input type="date" >
@@ -28,7 +28,6 @@
   <input type="email">
   <p>Handynummer</p>
   <input type="tel">
-  <p>Betrag</p>
   <input type="submit" id="kaufen" value="Kostenpflichtig kaufen">
 </div>
 <div class="teil3"> </div>
