css für logIn Button korrigiert

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,5 +26,5 @@
       <li><a [routerLink]="['/kontaktformular']">Kontakt</a></li>
     </ul>
   </nav>
-  <a [routerLink]="['/anmelden']"> Login  </a>
+  <a class="logIn" [routerLink]="['/anmelden']"> Login  </a>
 </header>
