verlinkungen hinzugefügt "accountverwaltung"

--- a/src/app/accountverwaltung/accountverwaltung.component.html
+++ b/src/app/accountverwaltung/accountverwaltung.component.html
@@ -18,10 +18,10 @@
 
   <div class="liste_der_optionen">
     <ul>
-      <li><a href="http://localhost:4200/kontaktdaten">Kontaktdaten bearbeiten</a></li>
-      <li><a href="http://localhost:4200/bevorstehendeEvents">Mein Skipass</a></li>
-      <li><a href="http://localhost:4200/kontaktformular"> Verlust melden </a></li>
-      <li>Problem melden</li>
+      <li><a [routerLink]="['/kontaktdaten']" >Kontaktdaten bearbeiten</a></li>
+      <li><a [routerLink]="['/bevorstehendeEvents']">Mein Skipass</a></li>
+      <li><a [routerLink]="['/kontaktformular']" > Verlust melden </a></li>
+      <li><a [routerLink]="['/kontaktformular']">Problem melden </a></li>
       <li>Abmelden</li>
     </ul>
   </div>
