h1 Schrift in CSS angepasst

--- a/src/app/bevorstehende-events/bevorstehende-events.component.scss
+++ b/src/app/bevorstehende-events/bevorstehende-events.component.scss
@@ -20,7 +20,14 @@
   width:50%;
   padding-bottom: 5%;
 }
-
+.teil2 h1{
+font-size:55px;
+text-align:center;
+margin-top:50px;
+font-style:revert;
+font-weight:bold;
+padding-bottom: 70px;
+}
 html, body {
   height: auto;
 }
