--- a/src/app/registrierungsmaske/registrierungsmaske.component.html
+++ b/src/app/registrierungsmaske/registrierungsmaske.component.html
@@ -4,29 +4,29 @@
   <div class="teil1"> </div>
   <div class="teil2">
     <h1>Registrieren bei Ticketero</h1>
-<div class="example-container">
+<form class="example-container">
   <mat-form-field>
     <mat-label>Vorname</mat-label>
-    <input matInput placeholder="Vorname" required>
+    <input matInput placeholder="Vorname" type="text" [(ngModel)] ="firstName" name="firstName" required>
   </mat-form-field><br>
   <mat-form-field>
     <mat-label>Nachname</mat-label>
-    <input matInput placeholder="Nachname" required>
+    <input matInput placeholder="Nachname" type="text" [(ngModel)] ="lastName" name="lastName" required>
   </mat-form-field><br>
   <mat-form-field appearance="fill">
   <mat-label>E-Mail Adresse</mat-label>
-  <input matInput placeholder="email@example.com" [formControl]="email" required>
-  <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+  <input matInput placeholder="email@example.com" [formControl]="email1" type="email" [(ngModel)] ="email" name="email" required>
+  <mat-error *ngIf="email1.invalid">{{getErrorMessage()}}</mat-error>
 </mat-form-field><br>
   <mat-form-field appearance="fill">
-    <mat-label>Enter your password</mat-label>
-    <input matInput [type]="hide ? 'password' : 'text'">
-    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+    <mat-label>Passwort eingeben</mat-label>
+    <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]= "password" name="password" required>
+    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Passwort verbergen'" [attr.aria-pressed]="hide">
       <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
   </mat-form-field>
-</div>
-    <button mat-raised-button color="primary">Registrieren</button><br>
+</form>
+    <button mat-raised-button color="primary" (click)="submit()">Registrieren</button><br>
     <p>Bereits einen Account bei Ticketero? Einfach hier anmelden</p>
     <button mat-raised-button color="primary" [routerLink]="['/anmelden']">Anmelden</button>
   </div>
