--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,10 +17,10 @@
           <li><a href="https://www.aletscharena.ch/aletsch-arena/orte/fiescheralp">Fiescheralp</a></li>
         </ul>
       </li>
-      <li><a href="#">Sprache</a>
+      <li><a>Sprache</a>
         <ul class="dropdown">
-          <li><a href="#">Deutsch</a></li>
-          <li><a href="#">Englisch</a></li>
+          <li><option value="de">Deutsch</option></li>
+          <li><option value="en">Englisch</option></li>
         </ul>
       </li>
       <li><a [routerLink]="['/kontaktformular']">Kontakt</a></li>
